--- a/server/src/main/resources/bootstrap.yml
+++ b/server/src/main/resources/bootstrap.yml
@@ -7,6 +7,11 @@ spring:
         enabled: true
         service-id:  CONFIG   # Config 服务的名称
       profile: test
+    stream:
+      bindings:
+        myMessage:
+          group: order
+          content-type: application/json
 eureka:
   client:
     service-url:
